v2.8.1/@rudderstack_rudder-sdk-node/@rudderstack_rudder-sdk-node_galaxy_llm.md
# ARCHITECTURAL_BRIEF: @rudderstack_rudder-sdk-node
> INSTRUCTION: Deterministic Syntactic Analysis. Base architectural insights on Structural Magnitude, Extracted Signatures, and Risk overlays.

## 0. FORENSIC TRACEABILITY
| Metadata | Value |
|---|---|
| **Engine** | `GitGalaxy Scope vlatest (Delta Mode)` |
| **Git Remote** | `N/A` |
| **Zero-Dependency Mode** | `Inactive (Full Precision)` |

## 0.5 AI THREAT AUDIT STATUS
> **✅ SECURE_NO_THREATS_DETECTED**
> XGBoost Structural Signatures model found no malicious artifacts.

## 1. SYSTEM ROLE & PHILOSOPHY
> You are a Senior Technical Storyteller and Codebase Architect. GitGalaxy has translated the non-visual architecture of this repository into measurable Structural Signatures (regex-derived counts, not an AST or compiler pass). Your job is to weave those signatures into a coherent, factual narrative about how this system is built -- its architecture, design patterns, and complexity -- not to render a verdict.
> 
> **CORE DIRECTIVES:**
> 1. **Narrate the Architecture, Don't Judge the Author:** Frame every observation as a blameless description of the system's physical reality. A high Structural Surface Profile reading (formerly called Risk Exposure; e.g., Complexity Load, formerly Cognitive Load Exposure) describes where the architecture may be drifting into fragile territory, not developer incompetence -- it is a prompt to investigate, never a verdict. These are activity/content surface meters, not defect-probability estimates (gitgalaxy#2991, evidence in #2982) -- describe what is there, don't imply it predicts a bug.
> 2. **The Physical Reality Rule:** Base your narrative strictly on the provided Structural Signatures and the numbers derived from them. Do not hallucinate meaning, and do not restate a heuristic's raw label (e.g. a 'Logic Bomb' or 'O(2^N)' flag) as a confirmed finding of malice or a guaranteed defect -- explain what the signature actually measures, weave it into the story of the file, and let the reader draw their own conclusion.
> 3. **Risk vs. Defense:** Code is a balance. A file with high `flux` (state mutation) is risky unless balanced by `freeze_hits` (immutability). High `danger` is brittle unless wrapped in `safety`. Tell that balance as part of the narrative, not as an isolated alarm.
> 
> **THE STRUCTURAL SIGNATURE LEXICON:**
> * **Structure & Mass:** `branch` (splits), `linear` (paths), `args` (coupling), `func_start` (entry points).
> * **Risk & Volatility:** `danger` (dynamic execution), `flux` (state mutation), `graveyard` (commented-out logic), `safety_neg` (security bypasses).
> * **Architecture & Domain:** `io` (network latency), `concurrency` (async orchestration), `api` (public surface), `import` (dependencies).
> * **Defensive Guardrails:** `safety` (Error handling), `freeze_hits` (immutability), `cleanup` (state destruction).
## 2. THE 13-POINT STRUCTURAL SURFACE PROFILE (formerly Risk Exposure) ANALYSIS (EQUATIONS & CONTEXT)
> **How the SAST Engine Calculates the Structural Surface Profile (Lower 0 - Higher Surface Presence 100%):**
> Most scores use a Sigmoid curve based on density (Hits / LOC) to prevent massive files from mathematically hiding their flaws. These 13 vectors are activity/content surface meters -- they describe what is present in a file, not the probability of a defect. The temporal-crucible validation record (gitgalaxy#2982, ~3,550 scanned snapshots, two repositories, pre-registered) tested the per-file-standing-risk claim to exhaustion and found it does not hold; see docs/vectors.md for the full record and gitgalaxy#2991 for the rename this drove. `risk_*` names remain the underlying column/key names for schema compatibility -- see the 'formerly' aliases below.
> 
> 1. **Complexity Load** (formerly Cognitive Load Exposure)**:** Measures the mental effort required for a developer to read and understand the file. `Density(Branches + (Flux * 2) + Async/Danger)` mitigated by `Doc Coverage`.
> 2. **Guard Balance** (formerly Error & Exception Risk Exposure)**:** Measures structural integrity and resilience against runtime errors. `Net Exposure = (Danger + Safety_Neg + Flux) - (Safety + Tests + Docs)`.
> 3. **Debt Markers** (formerly Tech Debt Exposure)**:** Measures the density of developer-annotated structural stress. `Density(TODOs [1x] + FIXMEs/Hacks [3x] + Empty Stubs [0.5x])`.
> 4. **Test Surface** (formerly Verification Risk Exposure)**:** Evaluates test coverage by comparing a function's structural complexity against the scope of the tests validating it.
> 5. **Connectivity** (formerly API Risk Exposure)**:** Measures the public surface area of a module. `Ratio(API Hits / Total Functions & Classes)`.
> 6. **Concurrency Surface** (formerly Concurrency Risk Exposure)**:** Measures the density of asynchronous operations, threading, and parallel execution logic.
> 7. **Mutation Surface** (formerly State Flux Risk Exposure)**:** Measures the frequency of data mutation and variable reassignment.
> 8. **Dead Code Surface** (formerly Commented Logic (dead code))**:** Measures the presence of abandoned, commented-out logic blocks.
> 9. **Spec Alignment** (formerly Spec Match Risk Exposure)**:** Measures how closely code aligns with formal specifications or architectural requirements.
> 10. **Historical Stability** (formerly Stability; predictive layer, promotion pending #2987)**:** Measures the recency of edits relative to the repository's entire lifespan. Part of the family the validation record actually supports as predictive -- currently ablated to zero in every scan (`GITGALAXY_DISABLE_GIT_HISTORY`, temporal-crucible#29).
> 11. **Historical Churn** (formerly Deep Churn; predictive layer, promotion pending #2987)**:** Measures the historical volatility and frequency of modification. Same predictive-layer status and ablation caveat as Historical Stability above.
> 12. **Documentation Surface** (formerly Documentation Risk Exposure)**:** Of the units extracted from a file, the weight-share a reader cannot recover from documentation -- public units count double, runtime-dynamic units count more, and a folder-level documentation umbrella shields the whole file. A ratio over units, not a density over lines; files with no extracted units have no value.
> 13. **Indentation Consistency:** Measures formatting alignment (Tabs vs. Spaces). Provided for codebase standardization context, not a functional risk.
> 
> **--- THE SECURITY & VULNERABILITY LENS ---**
> 14. **Obfuscation & Evasion Risk:** Measures the density of obfuscated logic, packed strings, and non-standard encoding.
> 15. **Logic Bomb / Sabotage Risk:** Measures condition-heavy execution leading to destructive OS, memory, or process commands.
> 16. **Injection Surface Risk Exposure:** Measures external network/I/O input flowing directly into dynamic execution contexts (XSS, SQLi, RCE).
> 17. **Memory Corruption Risk Exposure:** Measures the density of raw pointer math and manual memory allocations (Buffer Overflows, UAF).
> 18. **Credential Material** (formerly Secrets Risk Exposure)**:** Measures the presence of hardcoded credentials exposed to logs or globals.
> 
> **--- STRUCTURAL MAGNITUDE (NOT RISK) ---**
> **19. Function Magnitude (Impact Score):** Measures the physical footprint and 'heaviness' of a specific function. `((BranchHits + 1) * (Args + 1) + (0.05 * LOC)) * 10`. This is NOT a risk score.
> **20. File Magnitude (Total Impact):** Measures the total structural impact of a file. `Sum(Function Impacts) + API + Concurrency + Flux + (LOC / 50)`. This is NOT a risk score.

## 3. MACRO STATE
| Metric | Value |
|---|---|
| Total Artifacts | 23 |
| Analyzed Artifacts (Scanned) | 12 |
| Excluded Artifacts (Unparsable data, binaries, unsupported formats) | 11 |
| Total LOC | 560 |
| Volatility Index | 0.0 |
| % Scanned of codebase = | 52.2% |
| Dominant Lang | JAVASCRIPT |

## 3.5 MACRO-NETWORK TOPOLOGY (Resilience & Coupling)
| Metric | Value | Interpretation |
|---|---|---|
| Modularity | n/a (not computed) | High = Clean micro-boundaries. Low = Spaghetti coupling. |
| Assortativity | 0.0 | Positive = Resilient core. Negative = Fragile single-points-of-failure. |
| Cyclic Density | 0.0% | % of files trapped in dependency loops (Static Friction). |
| Avg Path Length | n/a (not computed) | Mean import hops from a file to each file it transitively depends on. Higher = Longer dependency chains. |
| Articulation Pts | 0 | Number of single files that, if removed, shatter the network. |

## 4. COMPOSITION
| Lang | Files | LOC | Share |
|---|---|---|---|
| JAVASCRIPT | 4 | 308 | 33.3% |
| TYPESCRIPT | 4 | 252 | 33.3% |
| MARKDOWN | 3 | 0 | 25.0% |
| PLAINTEXT | 1 | 0 | 8.3% |

## 4.5 REPOSITORY ECOSYSTEM BASELINE (GLOBAL ARCHITECTURE)
> **Assigned Ecosystem Baseline:** `Cluster 3`
> **Architectural Drift Z-Score:** `2.272`
> **Composition Archetype:** `Micro Repo (<30 files)` (z +0.00; from the repo's file-archetype mix)
> **File Composition:** Data / Markup / Trivial 42%, State Mutators Files 25%, Callbacks & Closures Files 17%, Interface Declarations Files 8%, Large Core Modules 8%
> **⚠️ UNIQUE INTERPRETATION:** This repository has a high Z-Score. While it maps closest to this archetype, its internal structure is a highly unique or hybrid interpretation of the pattern.

## 4.6 FILE ARCHETYPES & STATIC ASSETS
### Active Execution Logic (ML Clusters)
| Archetype | Count | Repo % |
|---|---|---|
| Unclassified | 8 | 66.7% |

### Inert Structural Mass (Static Categories)
| Category | Count | Repo % |
|---|---|---|
| Static: Literature & Documentation | 4 | 33.3% |

## 5. EXCLUDED ARTIFACTS (Unparsable or Shielded Files)
*Total Excluded Artifacts: 11*

**Composition by Extension & Reason:**
- `.map`: 9x Excluded (Unsupported Extension: '.map')
- `.js`: 1x Excluded (Saturation: Line 51 exceeds 500 chars), 1x Excluded (Saturation: Line 97 exceeds 500 chars)

## 6. STRUCTURAL SURFACE PROFILE (formerly Risk Exposure) ANALYSIS (0-100%)
| Structural Surface Vector | Min | Max | Mean | Med | Mode |
|---|---|---|---|---|---|
| Complexity Load (formerly Cognitive Load Exposure) | 0.0 | 59.9 | 21.0 | 11.0 | 59.9 |
| Guard Balance (formerly Error & Exception Exposure) | 48.2 | 97.7 | 75.6 | 78.2 | 97.7 |
| Debt Markers (formerly Tech Debt Exposure) | 0.0 | 100.0 | 37.2 | 0.0 | 0.0 |
| Test Surface (formerly Testing Exposure) | 2.3 | 80.0 | 12.2 | 2.6 | 2.6 |
| Connectivity (formerly API Exposure) | 2.5 | 17.5 | 7.1 | 3.7 | 17.5 |
| Concurrency Surface (formerly Concurrency Exposure) | 0.0 | 19.7 | 4.8 | 0.0 | 0.0 |
| Mutation Surface (formerly State Flux Exposure) | 0.0 | 100.0 | 48.0 | 44.3 | 100.0 |
| Dead Code Surface (formerly Commented Logic Exposure) | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| Spec Alignment (formerly Specification Exposure) | 100.0 | 100.0 | 100.0 | 100.0 | 100.0 |
| Historical Stability (predictive layer, promotion pending #2987) (formerly Instability Exposure) | 50.0 | 50.0 | 50.0 | 50.0 | 50.0 |
| Historical Churn (predictive layer, promotion pending #2987) (formerly Volatility Exposure) | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| Doc Surface (formerly Documentation Exposure) | 0.0 | 78.6 | 32.1 | 18.4 | 0.0 |
| Credential Material (formerly Hardcoded Payload Artifacts) | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |

## 6b. SURFACE FAMILY PROFILE (Tier 1/2/3 -- gitgalaxy#2994)
> Percentile columns elsewhere in this brief that come from the Tier-2 snapshot percentiles are SNAPSHOT-RELATIVE: "87" means this file's value sits at the 87th percentile of THIS repo's files for that surface -- true by construction (Hazen average-rank), not a calibrated 0-100 risk threshold like the section 6 sigmoid scores above. An all-zero surface across the whole repo reads as 0.0 for every file, never a false-median 50.
| Family | Repo Total | Files w/ Signal | P90 File Value | Top File |
|---|---|---|---|---|
| memory | 0 | 0 | 0 | - |
| cleanup | 0 | 0 | 0 | - |
| guards | 18 | 4 | 6 | `package/cjs/Logger.js` |
| danger | 39 | 6 | 10 | `package/types/index.d.ts` |
| concurrency | 2 | 2 | 1 | `package/index.d.ts` |
| connectivity | 10 | 8 | 2 | `package/index.d.ts` |
| io | 2 | 2 | 1 | `package/index.d.ts` |
| crypto | 0 | 0 | 0 | - |
| ipc | 0 | 0 | 0 | - |
| time | 2 | 2 | 1 | `package/cjs/Logger.js` |
| serialization | 2 | 2 | 1 | `package/cjs/loosely-validate-event/index.js` |
| regex | 0 | 0 | 0 | - |
| events | 0 | 0 | 0 | - |
| tests | 0 | 0 | 0 | - |
| docs | 50 | 8 | 10 | `package/index.d.ts` |
| debt | 0 | 0 | 0 | - |
| mutation | 121 | 7 | 39 | `package/cjs/Logger.js` |
| dead_code | 28 | 3 | 9 | `package/types/index.d.ts` |
| credential | 0 | 0 | 0 | - |
| threat | 26 | 2 | 13 | `package/cjs/Logger.js` |
| ml_ai | 0 | 0 | 0 | - |
| ui | 0 | 0 | 0 | - |

**Relations (repo medians):**
- `guard_balance_ratio` (guards / (danger + 1)): **0.0**
- `alloc_cleanup_pairing` (cleanup / (memory + 1)): **0.0**

## 7. ARCHITECTURAL CHOKE POINTS & DEPENDENCIES
### Top I/O Latency Risks
- `package/index.d.ts` (Hits: 1)
- `package/types/index.d.ts` (Hits: 1)
- `package/CHANGELOG.md` (Hits: 0)

### Top 5 Structural Pillars (Highest 'Imported By' / Blast Radius)
No file in this repository is imported by another file that GitGalaxy could resolve, so there is no blast-radius ranking to report. That is itself a finding: either the codebase genuinely has no internal dependency structure (a collection of scripts, documents or configuration rather than a coupled system), or its import style is one the engine does not resolve for this language. Do not infer that any file is load-bearing from this section.


### Top 5 Orchestrators (Highest 'Imports' / Fragility Index)
These files pull in the most external dependencies. They are highly coupled and fragile to API changes.

1. **index.js** (`package/cjs/loosely-validate-event/index.js`) — 3 outbound dependencies
2. **index.js** (`package/esm/loosely-validate-event/index.js`) — 3 outbound dependencies
3. **index.d.ts** (`package/types/index.d.ts`) — 2 outbound dependencies
4. **CHANGELOG.md** (`package/CHANGELOG.md`) — 0 outbound dependencies
5. **LICENSE.md** (`package/LICENSE.md`) — 0 outbound dependencies

## 8. CORE FUNCTION HITLIST (Heaviest Functions)
> *Note: The 'Impact' metric below represents Structural Magnitude (complexity, arguments, and length), NOT operational risk. These are the load-bearing pillars of the logic.*

- `createPersistenceQueue` **(Compute Cores)** (@ `package/index.d.ts`) -> Impact: **19.9** | LOC: 17
  * *Intent:* * port?: number = 6379; * host?: string = localhost; * db?: number = 0; * password?: string; * }, * jobOpts: { * maxAttempts: number = 10 * } * } * @p...
- `looselyValidateEvent` **(Compute Cores)** (@ `package/cjs/loosely-validate-event/index.js`) -> Impact: **18.4** | LOC: 21
  * *Intent:* /** * Validate an event. */
- `looselyValidateEvent` **(Compute Cores)** (@ `package/esm/loosely-validate-event/index.js`) -> Impact: **18.4** | LOC: 21
  * *Intent:* /** * Validate an event. */
- `createPersistenceQueue` **(Compute Cores)** (@ `package/types/index.d.ts`) -> Impact: **16.2** | LOC: 12
  * *Intent:* * port?: number = 6379; * host?: string = localhost; * db?: number = 0; * password?: string; * }, * jobOpts: { * maxAttempts: number = 10 * } * } * @p...
- `identify` **(Compute Cores)** (@ `package/types/index.d.ts`) -> Impact: **14.3** | LOC: 8
  * *Intent:* /** * Send an identify `message`. * * @param {Object} message * @param {String=} message.userId (optional) * @param {String=} message.anonymousId (opt...
- `group` **(Compute Cores)** (@ `package/types/index.d.ts`) -> Impact: **14.3** | LOC: 9
  * *Intent:* /** * Send a group `message`. * * @param {Object} message * @param {String} message.groupId * @param {String=} message.userId (optional) * @param {Str...
- `track` **(Compute Cores)** (@ `package/types/index.d.ts`) -> Impact: **14.3** | LOC: 9
  * *Intent:* /** * Send a track `message`. * * @param {Object} message * @param {String} message.event * @param {String=} message.userId (optional) * @param {Strin...
- `page` **(Compute Cores)** (@ `package/types/index.d.ts`) -> Impact: **14.3** | LOC: 9
  * *Intent:* /** * Send a page `message`. * * @param {Object} message * @param {String} message.name * @param {String=} message.userId (optional) * @param {String=...
- `alias` **(Compute Cores)** (@ `package/types/index.d.ts`) -> Impact: **14.3** | LOC: 9
  * *Intent:* /** * Send an alias `message`. * * @param {Object} message * @param {String} message.previousId * @param {String=} message.userId (optional) * @param ...
- `formatLogData` **(Defensive Guards)** (@ `package/cjs/Logger.js`) -> Impact: **9.6** | LOC: 18
  * *Intent:* /** * Formats the console message */ // eslint-disable-next-line class-methods-use-this

*Function archetypes referenced above:*
  * **Compute Cores**: dense algorithmic logic (high decision density per line)
  * **Defensive Guards**: validation and error handling (null checks, guards, early bailouts)

## 9. DIRECTORY GROUPS (Top 10 Heaviest Modules)
| Folder Path | Files | Total Impact | Avg Complexity Load | Avg Debt Markers |
|---|---|---|---|---|
| `package/cjs` | 1 | 95.04 | 59.88% | 0.0% |
| `package/esm` | 1 | 95.04 | 59.88% | 0.0% |
| `package/cjs/loosely-validate-event` | 1 | 50.04 | 9.17% | 0.0% |
| `package/esm/loosely-validate-event` | 1 | 50.04 | 9.17% | 0.0% |
| `package` | 5 | 19.27 | 2.57% | 19.88% |
| `package/types` | 2 | 6.69 | 8.54% | 99.1% |
| `package/types/loosely-validate-event` | 1 | 0.19 | 0.0% | 0.0% |

## 10. TARGETED STRUCTURAL SURFACE VECTORS (formerly Risk Vectors, Top 5 by Surface)
### Highest Debt Markers (formerly Tech Debt; Fragile/Planned)
- `package/types/index.d.ts` -> **99.9996%** Exposure
- `package/index.d.ts` -> **99.4203%** Exposure
- `package/types/Logger.d.ts` -> **98.2014%** Exposure
### Highest Mutation Surface (formerly State Flux; Mutation/Volatility)
- `package/cjs/Logger.js` -> **100.0%** Exposure
- `package/esm/Logger.js` -> **100.0%** Exposure
- `package/cjs/loosely-validate-event/index.js` -> **67.192%** Exposure
- `package/esm/loosely-validate-event/index.js` -> **67.192%** Exposure
- `package/types/index.d.ts` -> **21.4319%** Exposure
### Highest Design Slop (Dead & Duplicated Logic)
- `package/types/index.d.ts` -> **16** Orphaned Functions | **0** Duplicates
- `package/index.d.ts` -> **9** Orphaned Functions | **0** Duplicates
- `package/types/Logger.d.ts` -> **3** Orphaned Functions | **0** Duplicates

## 10.5 AI THREAT INTELLIGENCE (XGBoost)
*No files met the threshold for malicious structural signatures.*

## 10.6 WEAPONIZABLE SURFACE EXPOSURES (RULE-BASED SAST)
> Secondary Evidence: The following files tripped specific static threat signatures. Use these to explain *why* the XGBoost model flagged the files above.

*No critical vulnerabilities or security lens thresholds breached.*

## 10.7 ECOSYSTEM SECURITY AUDITS
> **AI CONTEXT:** High-level perimeter defense metrics from the X-Ray, Supply Chain Firewall, and API Network Mapper.

### ☢️ X-Ray & 🧱 Supply Chain Firewall
- **Binary Anomalies (X-Ray):** `0` (High entropy, packed payloads, or magic byte mismatches).
- **Blacklisted Dependencies:** `0` explicitly banned packages imported.
- **Unknown Dependencies:** `7` packages imported that bypass the Zero-Trust whitelist.

## 11. CUMULATIVE RISK HITLIST (Top 10 Highest Risk Files)
> Cumulative Risk is the sum of all individual risk exposures. These files represent the highest multi-dimensional technical debt and architectural fragility.

### 1. `package/types/index.d.ts` (TYPESCRIPT) -> Cumulative Risk: **511.56**
- **Archetype:** `file_cluster_15` (Distance: N/A IQR)
- **Composition Archetype:** `Large Core Modules` (z +0.91)
- **Magnitude:** 5.87 | **LOC:** 254 | **CtrlFlow:** 50.5% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Tech Debt (99.9996%), Safety Score (92.2495%), Verification (80.0%)
- **Heaviest Functions:** `createPersistenceQueue` (Compute Cores, Impact: 16.2), `identify` (Compute Cores, Impact: 14.3), `group` (Compute Cores, Impact: 14.3)

### 2. `package/cjs/Logger.js` (JAVASCRIPT) -> Cumulative Risk: **506.23**
- **Archetype:** `file_cluster_0` (Distance: N/A IQR)
- **Composition Archetype:** `Callbacks & Closures Files` (z -0.39)
- **Magnitude:** 95.04 | **LOC:** 89 | **CtrlFlow:** 14.3% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (97.6708%), Documentation (78.5714%)
- **Heaviest Functions:** `formatLogData` (Defensive Guards, Impact: 9.6), `outputLog` (Callbacks & Closures, Impact: 3.8), `Logger` (Defensive Guards, Impact: 3.1)

### 3. `package/esm/Logger.js` (JAVASCRIPT) -> Cumulative Risk: **506.23**
- **Archetype:** `file_cluster_0` (Distance: N/A IQR)
- **Composition Archetype:** `Callbacks & Closures Files` (z -0.39)
- **Magnitude:** 95.04 | **LOC:** 89 | **CtrlFlow:** 14.3% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (97.6708%), Documentation (78.5714%)
- **Heaviest Functions:** `formatLogData` (Defensive Guards, Impact: 9.6), `outputLog` (Callbacks & Closures, Impact: 3.8), `Logger` (Defensive Guards, Impact: 3.1)

### 4. `package/types/Logger.d.ts` (TYPESCRIPT) -> Cumulative Risk: **412.33**
- **Archetype:** `file_cluster_15` (Distance: N/A IQR)
- **Composition Archetype:** `Interface Declarations Files` (z +0.52)
- **Magnitude:** 0.82 | **LOC:** 27 | **CtrlFlow:** 5.0% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Tech Debt (98.2014%), Safety Score (90.864%), Documentation (62.5%)
- **Heaviest Functions:** `constructor` (State Mutators, Impact: 2.9), `outputLog` (Parameter Forwarders, Impact: 1.8), `formatLogData` (State Mutators, Impact: 1.8)

### 5. `package/index.d.ts` (TYPESCRIPT) -> Cumulative Risk: **352.6**
- **Archetype:** `file_cluster_0` (Distance: N/A IQR)
- **Composition Archetype:** `State Mutators Files` (z -0.08)
- **Magnitude:** 2.69 | **LOC:** 304 | **CtrlFlow:** 52.1% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Tech Debt (99.4203%), Stability (50.0%), Safety Score (48.1923%)
- **Heaviest Functions:** `createPersistenceQueue` (Compute Cores, Impact: 19.9), `constructor` (State Mutators, Impact: 3.5), `identify` (State Mutators, Impact: 3.5)

### 6. `package/cjs/loosely-validate-event/index.js` (JAVASCRIPT) -> Cumulative Risk: **288.47**
- **Archetype:** `file_cluster_2` (Distance: N/A IQR)
- **Composition Archetype:** `State Mutators Files` (z -0.61)
- **Magnitude:** 50.04 | **LOC:** 107 | **CtrlFlow:** 22.1% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), State Flux (67.192%), Safety Score (56.4586%), Stability (50.0%)
- **Heaviest Functions:** `looselyValidateEvent` (Compute Cores, Impact: 18.4), `validateGenericEvent` (Defensive Guards, Impact: 6.5), `validateTrackEvent` (State Mutators, Impact: 3.0)

### 7. `package/esm/loosely-validate-event/index.js` (JAVASCRIPT) -> Cumulative Risk: **288.47**
- **Archetype:** `file_cluster_2` (Distance: N/A IQR)
- **Composition Archetype:** `State Mutators Files` (z -0.61)
- **Magnitude:** 50.04 | **LOC:** 107 | **CtrlFlow:** 22.1% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), State Flux (67.192%), Safety Score (56.4586%), Stability (50.0%)
- **Heaviest Functions:** `looselyValidateEvent` (Compute Cores, Impact: 18.4), `validateGenericEvent` (Defensive Guards, Impact: 6.5), `validateTrackEvent` (State Mutators, Impact: 3.0)

### 8. `package/types/loosely-validate-event/index.d.ts` (TYPESCRIPT) -> Cumulative Risk: **238.09**
- **Archetype:** `file_cluster_15` (Distance: N/A IQR)
- **Composition Archetype:** `Data / Markup / Trivial` (z +0.00)
- **Magnitude:** 0.19 | **LOC:** 6 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Safety Score (65.443%), Stability (50.0%), State Flux (16.7982%)
- **Heaviest Functions:** `looselyValidateEvent` (Parameter Forwarders, Impact: 1.8)

## 12. SCANNED ARTIFACTS HITLIST (Top 25 Heaviest Files)
> *Note: 'Magnitude' represents the file's total Structural Magnitude and impact within the system. It is independent of its Risk Profile. High magnitude implies high structural importance and centralization.*

### `package/cjs/Logger.js` (JAVASCRIPT | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_0` (Drift: 0.0 IQR)
- **Magnitude:** 95.04 | **LOC:** 89 | **CtrlFlow:** 14.3% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (59.8837%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `formatLogData` **(Defensive Guards)** (Impact: 9.6)
    * *Intent:* /** * Formats the console message */ // eslint-disable-next-line class-methods-use-this
  * `outputLog` **(Callbacks & Closures)** (Impact: 3.8)
  * `Logger` **(Defensive Guards)** (Impact: 3.1)
  * `log` **(Callbacks & Closures)** (Impact: 2.4)
  * `info` **(Callbacks & Closures)** (Impact: 2.4)
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 21 instances
* *State Mutation (weighted view):* 64
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 11`, `structural_boundaries: 21`, `args: 9`, `func_start: 8`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 22`
* *Architecture:* `api: 1`
* *Defense:* `safety: 6`, `doc: 3`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 83.333
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` None
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `package/esm/Logger.js` (JAVASCRIPT | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_0` (Drift: 0.0 IQR)
- **Magnitude:** 95.04 | **LOC:** 89 | **CtrlFlow:** 14.3% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (59.8837%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `formatLogData` **(Defensive Guards)** (Impact: 9.6)
    * *Intent:* /** * Formats the console message */ // eslint-disable-next-line class-methods-use-this
  * `outputLog` **(Callbacks & Closures)** (Impact: 3.8)
  * `Logger` **(Defensive Guards)** (Impact: 3.1)
  * `log` **(Callbacks & Closures)** (Impact: 2.4)
  * `info` **(Callbacks & Closures)** (Impact: 2.4)
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 21 instances
* *State Mutation (weighted view):* 64
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 11`, `structural_boundaries: 21`, `args: 9`, `func_start: 8`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 22`
* *Architecture:* `api: 1`
* *Defense:* `safety: 6`, `doc: 3`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 83.333
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` None
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `package/cjs/loosely-validate-event/index.js` (JAVASCRIPT | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_2` (Drift: 0.0 IQR)
- **Magnitude:** 50.04 | **LOC:** 107 | **CtrlFlow:** 22.1% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (9.1698%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `looselyValidateEvent` **(Compute Cores)** (Impact: 18.4)
    * *Intent:* /** * Validate an event. */
  * `validateGenericEvent` **(Defensive Guards)** (Impact: 6.5)
    * *Intent:* /** * Validate an event object. */
  * `validateTrackEvent` **(State Mutators)** (Impact: 3.0)
    * *Intent:* /** * Validate a "track" event. */
  * `validateGroupEvent` **(State Mutators)** (Impact: 3.0)
    * *Intent:* /** * Validate a "group" event. */
  * `validateIdentifyEvent` **(State Mutators)** (Impact: 3.0)
    * *Intent:* /** * Validate a "identify" event. */
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 2 instances
* *State Mutation (weighted view):* 6
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 17`, `structural_boundaries: 17`, `args: 9`, `func_start: 8`
* *Risk/State:* `state_mutation: 2`
* *Architecture:* `api: 1`, `import: 3`
* *Defense:* `safety: 3`, `doc: 9`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 83.333
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` assert, component-type, join-component
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `package/esm/loosely-validate-event/index.js` (JAVASCRIPT | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_2` (Drift: 0.0 IQR)
- **Magnitude:** 50.04 | **LOC:** 107 | **CtrlFlow:** 22.1% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (9.1698%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `looselyValidateEvent` **(Compute Cores)** (Impact: 18.4)
    * *Intent:* /** * Validate an event. */
  * `validateGenericEvent` **(Defensive Guards)** (Impact: 6.5)
    * *Intent:* /** * Validate an event object. */
  * `validateTrackEvent` **(State Mutators)** (Impact: 3.0)
    * *Intent:* /** * Validate a "track" event. */
  * `validateGroupEvent` **(State Mutators)** (Impact: 3.0)
    * *Intent:* /** * Validate a "group" event. */
  * `validateIdentifyEvent` **(State Mutators)** (Impact: 3.0)
    * *Intent:* /** * Validate a "identify" event. */
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 2 instances
* *State Mutation (weighted view):* 6
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 17`, `structural_boundaries: 17`, `args: 9`, `func_start: 8`
* *Risk/State:* `state_mutation: 2`
* *Architecture:* `api: 1`, `import: 3`
* *Defense:* `safety: 3`, `doc: 9`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 83.333
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` assert, component-type, join-component
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `package/CHANGELOG.md` (MARKDOWN | Tier 1 | AI Safe: 0.0%)
- **Global Archetype:** `Static: Literature & Documentation` (Drift: N/A IQR)
- **Magnitude:** 10.34 | **LOC:** 517 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (0.0%), Tech Debt (0.0%)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* None
* *Risk/State:* None
* *Architecture:* None
* *Defense:* None
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 83.333
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` None
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `package/types/index.d.ts` (TYPESCRIPT | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_15` (Drift: 0.0 IQR)
- **Magnitude:** 5.87 | **LOC:** 254 | **CtrlFlow:** 50.5% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (14.3887%), Tech Debt (99.9996%)
**Top Internal Functions/Classes:**
  * `createPersistenceQueue` **(Compute Cores)** (Impact: 16.2)
    * *Intent:* * port?: number = 6379; * host?: string = localhost; * db?: number = 0; * password?: string; * }, * ...
  * `identify` **(Compute Cores)** (Impact: 14.3)
    * *Intent:* /** * Send an identify `message`. * * @param {Object} message * @param {String=} message.userId (opt...
  * `group` **(Compute Cores)** (Impact: 14.3)
    * *Intent:* /** * Send a group `message`. * * @param {Object} message * @param {String} message.groupId * @param...
  * `track` **(Compute Cores)** (Impact: 14.3)
    * *Intent:* /** * Send a track `message`. * * @param {Object} message * @param {String} message.event * @param {...
  * `page` **(Compute Cores)** (Impact: 14.3)
    * *Intent:* /** * Send a page `message`. * * @param {Object} message * @param {String} message.name * @param {St...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 1 instances
* *State Mutation (weighted view):* 3
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 55`, `structural_boundaries: 13`, `args: 16`, `func_start: 16`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 20`, `state_mutation: 1`, `unreferenced_by_name: 16`
* *Architecture:* `io: 1`, `api: 1`, `concurrency: 1`, `import: 2`
* *Defense:* `doc: 10`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 83.333
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` Logger, bull
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `package/package.json` (PLAINTEXT | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Static: Literature & Documentation` (Drift: N/A IQR)
- **Magnitude:** 2.9 | **LOC:** 145 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (0.0%), Tech Debt (0.0%)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* None
* *Risk/State:* None
* *Architecture:* None
* *Defense:* None
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 83.333
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` None
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `package/index.d.ts` (TYPESCRIPT | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_0` (Drift: 0.0 IQR)
- **Magnitude:** 2.69 | **LOC:** 304 | **CtrlFlow:** 52.1% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (12.8626%), Tech Debt (99.4203%)
**Top Internal Functions/Classes:**
  * `createPersistenceQueue` **(Compute Cores)** (Impact: 19.9)
    * *Intent:* * port?: number = 6379; * host?: string = localhost; * db?: number = 0; * password?: string; * }, * ...
  * `constructor` **(State Mutators)** (Impact: 3.5)
  * `identify` **(State Mutators)** (Impact: 3.5)
    * *Intent:* /** * Send an identify `message`. * * @param {Object} message * @param {String=} message.userId (opt...
  * `group` **(State Mutators)** (Impact: 3.5)
    * *Intent:* /** * Send a group `message`. * * @param {Object} message * @param {String} message.groupId * @param...
  * `track` **(State Mutators)** (Impact: 3.5)
    * *Intent:* /** * Send a track `message`. * * @param {Object} message * @param {String} message.event * @param {...
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 63`, `structural_boundaries: 28`, `args: 12`, `func_start: 9`, `class_start: 4`
* *Risk/State:* `safety_bypasses: 5`, `state_mutation: 1`, `unreferenced_by_name: 9`
* *Architecture:* `io: 1`, `api: 2`, `concurrency: 1`
* *Defense:* `doc: 13`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 83.333
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` None
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `package/README.md` (MARKDOWN | Tier 1 | AI Safe: 0.0%)
- **Global Archetype:** `Static: Literature & Documentation` (Drift: N/A IQR)
- **Magnitude:** 2.34 | **LOC:** 117 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (0.0%), Tech Debt (0.0%)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* None
* *Risk/State:* None
* *Architecture:* None
* *Defense:* None
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 83.333
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` None
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `package/LICENSE.md` (MARKDOWN | Tier 1 | AI Safe: 0.0%)
- **Global Archetype:** `Static: Literature & Documentation` (Drift: N/A IQR)
- **Magnitude:** 1.0 | **LOC:** 32 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (0.0%), Tech Debt (0.0%)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* None
* *Risk/State:* None
* *Architecture:* None
* *Defense:* None
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 83.333
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` None
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `package/types/Logger.d.ts` (TYPESCRIPT | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_15` (Drift: 0.0 IQR)
- **Magnitude:** 0.82 | **LOC:** 27 | **CtrlFlow:** 5.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (2.6979%), Tech Debt (98.2014%)
**Top Internal Functions/Classes:**
  * `constructor` **(State Mutators)** (Impact: 2.9)
    * *Intent:* /** * Service to log messages/data to output provider, default is console */
  * `outputLog` **(Parameter Forwarders)** (Impact: 1.8)
  * `formatLogData` **(State Mutators)** (Impact: 1.8)
    * *Intent:* /** * Formats the console message */
  * `log` **(Interface Declarations)** (Impact: 1.5)
  * `info` **(Interface Declarations)** (Impact: 1.5)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 1`, `structural_boundaries: 10`, `args: 8`, `func_start: 8`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 10`, `unreferenced_by_name: 3`
* *Architecture:* `api: 2`
* *Defense:* `doc: 2`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 83.333
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` None
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `package/types/loosely-validate-event/index.d.ts` (TYPESCRIPT | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `file_cluster_15` (Drift: 0.0 IQR)
- **Magnitude:** 0.19 | **LOC:** 6 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (0.0%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `looselyValidateEvent` **(Parameter Forwarders)** (Impact: 1.8)
    * *Intent:* /** * Validate an event. */
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `structural_boundaries: 3`, `args: 1`, `func_start: 1`
* *Risk/State:* `safety_bypasses: 2`, `state_mutation: 1`
* *Architecture:* `api: 1`
* *Defense:* `doc: 1`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 83.333
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` None
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

## 13. ARCHITECTURAL DRIFT ANOMALIES & ANTI-PATTERNS
> **AI CONTEXT:** Pay close attention to 'Anti-Pattern' files. These files blend in globally (Low Global Drift), but heavily violate the standard conventions of their native programming language (High Local Drift). 'Mixed-Responsibility' files sit perfectly between two global archetypes (Delta <= 0.9 IQR), indicating a violation of the Single Responsibility Principle.

*No highly conflicted/drifting files detected within the 0.9 IQR threshold.*

## 13.5 STRATEGIC REFACTORING TARGETS (Volatility & Authorship Centralization)
> **AI CONTEXT:** Use these intersections to recommend pragmatic next steps. Risk is exponentially worse when combined with high churn (frequent edits) or high authorship centralization (single points of failure).

## 13.8 SYSTEMIC NETWORK BOTTLENECKS (N-Dimensional Topology)
> **AI CONTEXT:** These metrics cross-multiply Network Graph Theory against Risk Exposure to identify the exact mechanisms of runtime failure.

### 🙈 Opaque Critical Nodes (Dependency Blast Radius * Doc Risk)
These are 'Core Architecture Nodes' that the entire ecosystem relies upon, but they lack human intent, documentation, or ownership metadata. Modifying them is flying blind.

- `package/cjs/Logger.js` -> **Severity: 6547.59** (Blast Radius: 83.333 * Doc Risk: 78.5714%)
- `package/esm/Logger.js` -> **Severity: 6547.59** (Blast Radius: 83.333 * Doc Risk: 78.5714%)
- `package/types/Logger.d.ts` -> **Severity: 5208.312** (Blast Radius: 83.333 * Doc Risk: 62.5%)
- `package/types/index.d.ts` -> **Severity: 2604.156** (Blast Radius: 83.333 * Doc Risk: 31.25%)
- `package/index.d.ts` -> **Severity: 462.965** (Blast Radius: 83.333 * Doc Risk: 5.5556%)

## AI SYSTEM INSTRUCTIONS (OUTPUT FORMAT)
> **CRITICAL TONE DIRECTIVE:** Stay in the Senior Technical Storyteller persona from Section 1. Use grounded, professional software engineering terminology (e.g., coupling, cohesion, technical debt, single responsibility) woven into a cohesive narrative -- not a dry, disconnected bullet-point audit. DO NOT use sci-fi, dramatic, or sensational jargon (e.g., 'Trojan', 'violently violates', 'parasitic', 'chimeric'). Be objective and factual, but write like you're explaining the codebase to a colleague, not filing a verdict.
> **When the user asks for an architectural review, structure your response using these directives:**
> 1. **Information Flow & Purpose (The Executive Summary):** Synthesize the overarching purpose of the codebase. Trace the information flow by analyzing the Top Dependencies ('Imports' and 'Imported By') and the Language Composition. Explain how the system's archetype drives its design, but only mention Z-Score deviations if they are highly abnormal.
> 2. **Notable Structures & Architecture:** Discuss the architecture based on the Dependency Graph. Identify the foundational load-bearers (highest inbound connections) versus the fragile orchestrators (highest outbound imports).
> 3. **Security & Vulnerabilities:** Immediately surface any critical threats flagged in the `AI THREAT INTELLIGENCE (XGBoost)` section. If none exist, briefly confirm the repository is secure from recognized structural threats.
> 4. **Outliers & Extremes:** Focus strictly on statistical anomalies. Highlight files or directory groups with massive Cumulative Risk, severe Z-Scores (Architectural Drift), or extreme spikes in individual risk vectors (like State Flux or Cognitive Load). Ignore normal, healthy code.
> 5. **Recommended Next Steps (Refactoring for Stability):** Provide 2-3 highly specific, pragmatic suggestions focused strictly on reducing outliers. Instruct the user on how to refactor high Z-score files, decouple massive central nodes, or mitigate extreme risk exposures to stabilize the system's architecture.
